[package]
name = "rsdsl_6in4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.7.2"
notify = "5.1.0"
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.1.0" }
rsdsl_netlinkd = { git = "https://github.com/rsdsl/netlinkd.git", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tun-tap = "0.1.3"
