[package]
name = "rsdsl_6in4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
libc = "0.2.143"
notify = "5.1.0"
reqwest = { version = "0.11.17", default-features = false, features = ["blocking", "rustls-tls"] }
rsdsl_he_config = { git = "https://github.com/rsdsl/he_config.git", version = "0.1.0" }
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.2.2" }
rsdsl_netlinkd = { git = "https://github.com/rsdsl/netlinkd.git", version = "0.6.1" }
rsdsl_netlinkd_sys = { git = "https://github.com/rsdsl/netlinkd.git", version = "0.4.9" }
serde_json = "1.0"
thiserror = "1.0"
